--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,7 +1,12 @@
 .avatar {
-  width: 40px;
+  width: 60px;
   border-radius: 50%;
 }
+  .decorated {
+    position: absolute;
+    left: 40px;
+    top: 10px;
+  }
 .avatar-large {
   width: 56px;
   border-radius: 50%;
@@ -17,4 +22,11 @@
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+}
+.avatar-decoration {
+  width: 35px;
+  position: absolute;
+  left: 55px;
+  top: 35px;
+  z-index: 1;
 }
