--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,10 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+// EV Slide specific
+$ev-blue: #15bcd8;
+$ev-green: #32c3b2;
+$ev-orange: #f68e4f;
+$ev-darkgray: #424b58;
+$ev-lightgray: #afb7c1;
