--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,11 @@
 
     <div class="wrapper" id="outer-wrapper">
       <div class="wrapper" id="inner-wrapper">
-        <div class="container" style="height: 98.5vh">
+        <div id="container" style="height: 97.3vh">
           <%= yield %>
+          <div id="footer" class="d-flex justify-content-around">
+            <div>Vu</div><div>|</div><div>Me</div><div>|</div><div>Q</div>
+          </div>
         </div>
       </div>
     </div>
