--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <div id="container" style="height: 97.3vh">
           <%= yield %>
           <div id="footer" class="d-flex justify-content-around">
-            <div>Vu</div><div>|</div><div>Me</div><div>|</div><div>Q</div>
+            <div>Vu</div><div class="footer-middle">Me</div><div>Qu</div>
           </div>
         </div>
       </div>
