--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
 <h1>EV Slide</h1>
 <p>Oscar Nilestam</p>
+<p>Oscar Nilestam</p>
+<p>Oscar Nilestam</p>
+<p>Oscar Nilestam</p>
+<p>Oscar Nilestam</p>
+<p>Oscar Nilestam</p>
+<p>Oscar Nilestam</p>
+<p>Oscar Nilestam</p>
+<p>Oscar Nilestam</p>
+<p>Oscar Nilestam</p>
+<p>Oscar Nilestam</p>
+<p>Oscar Nilestam</p>
+<p>Oscar Nilestam</p>
+
