--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,13 @@
 <h1><%= @user.first_name %> <%= @user.last_name %> </h1>
 <p><%= @user.email %> </p>
 <p><%= @user.car_plate %> </p>
+<% if @session %>
+  <%= @session.charging_post_id %>
+  <!-- Nedan skall lösas så det sker automatiskt (JavaScript) senare. -->
+  <%= @session.start_time %>
+
+<% else %>
+
+  <div class="btn btn-primary">Kamera</div>
+
+<% end %>
