--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,13 +1,11 @@
 <h1><%= @user.first_name %> <%= @user.last_name %> </h1>
 <p><%= @user.email %> </p>
 <p><%= @user.car_plate %> </p>
+
 <% if @session %>
-  <%= @session.charging_post_id %>
+  <p>Charger: <%= @session.charging_post_id %>
   <!-- Nedan skall lösas så det sker automatiskt (JavaScript) senare. -->
-  <%= @session.start_time %>
-
+  <p>Starting time: <%= @session.start_time%></p>
 <% else %>
-
   <div class="btn btn-primary">Kamera</div>
-
 <% end %>
