--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -9,3 +9,4 @@
 <% else %>
   <div class="btn btn-primary">Kamera</div>
 <% end %>
+<%= link_to "Log out", destroy_user_session_path, method: :delete%>
