--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -4,18 +4,27 @@
 
 <% if @session %>
   <p>Charger: <%= @session.charging_post_id %></p>
-  <p>Starting time: <%= @session.start_time.strftime("%H:%M") %></p>
+  <p>Starting time: <%= (@session.start_time.utc + 2.hours).strftime("%H:%M") %></p>
 
   <p>Current time: <%= (Time.now.utc + 2.hours).strftime("%H:%M") %></p>
 
   <% current_max_hours = 4 %>
   <% max_park_time = Time.at(current_max_hours * 3600) %>
-  <% utc_offset = 3 * 3600 %>
+  <% utc_offset = 1 * 3600 %>
+
   <!-- Should be updated on a second by second basis. -->
   <p>Time remaining (of <%= current_max_hours %> hours): <%= Time.at(max_park_time - (Time.now.utc - @session.start_time.utc) - utc_offset).strftime("%H:%M:%S") %></p>
 
 <% else %>
   <div class="btn btn-primary">Camera</div>
+
+  <%= simple_form_for(@charging_session) do |f| %>
+    <%= f.association :charging_post, collection:@available_posts %>
+
+    <%= f.submit "Initiate", method: :post, class: "btn btn-success" %>
+
+  <% end %>
+
 
 <% end %>
 <%= link_to "Log out", destroy_user_session_path, method: :delete%>
