interim commit to reach images

--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -12,6 +12,7 @@
   <body>
 
     <div class="wrapper" id="outer-wrapper">
+      <p>Login page... more to come...</p>
       <div class="wrapper" id="inner-wrapper">
         <div id="container" style="height: 97.3vh">
           <%= yield %>
