--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,21 +1,21 @@
-<div class="navbar navbar-light navbar-lewagon fixed-bottom">
+<div class="navbar fixed-bottom">
 
- <div class="nav_icons" id="navbarSupportedContent">
- <%= link_to profile_path, class: "navbar-me" do %>
-  <%= image_tag "me_icon.png" %>
-  <% end %>
+    <div class="navbar-item">
+      <%= link_to profile_path, id: "navbar-me" do %>
+      <%= image_tag "me_grey.png", class: "navbar-img" %>
+      <% end %>
+    </div>
 
-   <%= link_to class: "navbar-queue" do %>
-   <p class="nav-item"><i class="nav_icon fas fa-search"></i></p>
-   <% end %>
-​
-   <%= link_to class: "navbar-view" do%>
-   <p class="nav-item"><i class="nav_icon far fa-comments"></i></p>
-   <% end %>
-​
-​
-  <%= link_to myprofile_path, class: "nav-link" do%>
-   <%= cl_image_tag current_user.photo, class: "avatar nav-item", width: 1700, height: 1700,:crop=>"crop", :gravity=>"face", class: "avatar"%>
-  <% end %>
- </div>
+    <div class="navbar-item">
+      <%= link_to profile_path, id: "navbar-queue" do %>
+      <%= image_tag "queue_grey.png", class: "navbar-img" %>
+      <% end %>
+    </div>
+
+    <div class="navbar-item">
+      <%= link_to profile_path, id: "navbar-view" do %>
+      <%= image_tag "charging_grey.png", class: "navbar-img" %>
+      <% end %>
+    </div>
+
 </div>
