--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -25,7 +25,7 @@
     <%= f.submit "Initiate", method: :post, class: "btn btn-success" %>
 
   <% end %>
-
+<%= render 'shared/navbar' %>
 
 <% end %>
 <%= link_to "Log out", destroy_user_session_path, method: :delete%>
