--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,1 +1,21 @@
-header.scss
+#header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $ev-blue;
+  width: 100%;
+  height: 70px;
+}
+#app_name{
+  font-family: $body-font;
+  font-size: 24px;
+  font-weight: strong;
+}
+.push {
+  margin-left: auto;
+}
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
