--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -4,7 +4,7 @@
 // Define fonts for body and headers
 //$body-font: "Open Sans", "Helvetica", "sans-serif";
 //$headers-font: "Raleway", "Helvetica", "sans-serif";
-$body-font: "Roboo", "Helvetica", "sans-serif";
+$body-font: "Roboto", "Helvetica", "sans-serif";
 $headers-font: "Playfair Display", "Helvetica", "serif";
 
 
