--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/header" %>
 <h1><%= @user.first_name %> <%= @user.last_name %> </h1>
 <p><%= @user.email %> </p>
 <p><%= @user.car_plate %> </p>
