--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -2,6 +2,7 @@
 <h1><%= @user.first_name %> <%= @user.last_name %> </h1>
 <p><%= @user.email %> </p>
 <p><%= @user.car_plate %> </p>
+<%= image_tag @user.photo, class: "avatar" %>
 
 <% if @session %>
   <p>Charger: <%= @session.charging_post_id %></p>
@@ -28,13 +29,9 @@
   <p><%= link_to "Quit charging", charging_session_path(@session), method: :patch %></p>
 
 <% else %>
-  <div class="btn btn-primary">Camera</div>
-
   <%= simple_form_for(@charging_session) do |f| %>
     <%= f.association :charging_post, collection:@available_posts %>
-
     <%= f.submit "Initiate", method: :post, class: "btn btn-success" %>
-
   <% end %>
 <%= render 'shared/navbar' %>
 
