--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,18 +1,22 @@
 .navbar-lewagon {
-  height: 12%;
+  height: 50px;
   width: 100%;
   background: white;
   display: flex;
-  justify-content: space-between;
-  padding-bottom: 1rem;
+  justify-content: space-around;
+  padding-bottom: 0.5rem !important;
+}
+
+.navbar {
+  justify-content: space-around !important;
 }
 
 .navbar-img {
-  height: 20px;
+  height: 80%;
 }
 
 .navbar-item {
-  height: 10px;
+  height: 40px;
   //align-items: center;
 }
 
