--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar fixed-bottom">
+<div class="navbar navbar-lewagon fixed-bottom">
 
     <div class="navbar-item">
       <%= link_to profile_path, id: "navbar-me" do %>
