--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,11 @@
 
     <div class="navbar-item">
       <%= link_to profile_path, id: "navbar-me" do %>
-      <%= image_tag "me_grey.png", class: "navbar-img" %>
+        <% if controller_name == "pages" %>
+          <%= image_tag "me_orange.png", class: "navbar-img" %>
+        <% else %>
+          <%= image_tag "me_grey.png", class: "navbar-img" %>
+        <% end %>
       <% end %>
     </div>
 
