--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -4,15 +4,21 @@
   justify-content: center;
   background-color: $ev-blue;
   width: 100%;
-  height: 70px;
+  height: 10%;
+  position: relative;
 }
 #app_name{
   font-family: $body-font;
   font-size: 24px;
   font-weight: strong;
+  padding-right: 10px;
 }
 .push {
   margin-left: auto;
+  padding-right: 10px;
+  position: absolute;
+  top: 20px;
+  right: 5px;
 }
 .center {
   display: flex;
