--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <div id="app_name">EV SLIDE</div>
     <%= image_tag "car.png", height: '75', width: '75' %>
   </div>
-    <div class="push">
-      <%= image_tag "logout.png", height: '40', width: '40' %>
-    </div>
+  <div class="push">
+    <%= link_to image_tag("logout.png", height: '40', width: '40', border: 0), destroy_user_session_path, method: :delete %>
+  </div>
 </div>
