--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -26,11 +26,15 @@
   <p><%= link_to "Quit charging", charging_session_path(@session), method: :patch %></p>
 
 <% else %>
-  <%= simple_form_for(@charging_session) do |f| %>
-    <%= f.association :charging_post, collection:@available_posts %>
-    <%= f.submit "Initiate", method: :post, class: "btn btn-success" %>
+  <%= simple_form_for (@charging_session) do |f| %>
+    <div class='d-flex justify-content-between' >
+      <div><%= f.label :charging_post %></div>
+      <div><%= f.association :charging_post, collection:@available_posts, label: false%></div>
+      <div><%= f.submit "Initiate", method: :post, class: "btn btn-success" %></div>
+    </div>
   <% end %>
+
 <% end %>
 <div>
-<%= link_to "Log out", destroy_user_session_path, method: :delete%>
+  <%= link_to "Log out", destroy_user_session_path, method: :delete%>
 </div>
