--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: $ev-blue;
+  background-color: $ev-blue transparent;
   width: 100%;
   height: 10%;
   position: relative;
