card initiated, but mostly dropdown bug fixed

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,13 +1,13 @@
 <div class='ev-card d-flex justify-content-between' >
   <div><%= image_tag @user.photo, class: "avatar" %></div>
   <div><%= @user.first_name %> <%= @user.last_name %></div>
-  <div></div>
+  <div>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </div>
 </div>
 
 <div class='ev-card d-flex justify-content-between' >
   <div><%= image_tag 'car.png', class: "avatar" %></div>
   <div><%= @user.car_plate %></div>
-  <div></div>
+  <div>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </div>
 </div>
 
 <p></p>
@@ -35,11 +35,16 @@
   <p><%= link_to "Quit charging", charging_session_path(@session), method: :patch %></p>
 
 <% else %>
+
   <%= simple_form_for (@charging_session) do |f| %>
     <div class='ev-card d-flex justify-content-between' >
-      <div><%= f.label :charging_post %></div>
-      <div><%= f.association :charging_post, collection:@available_posts, label: false%></div>
-      <div><%= f.submit "Initiate", method: :post, class: "btn btn-success" %></div>
+      <div><%= f.label :charging_post, label: "Outlet" %></div>
+      <div><%= f.association :charging_post, collection:@available_posts, default: 1,  label: false %></div>
+      <div>
+         <%= button_tag(type: 'submit', class: "btn btn-success") do %>
+          <i class="fas fa-bolt"></i>
+        <% end %>
+      </div>
     </div>
   <% end %>
 
