--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -16,4 +16,6 @@ $ev-orange: #f68e4f;
 $ev-darkgray: #424b58;
 $ev-lightgray: #afb7c1;
 
-$box-shadow: 2px 3px 3px rgba(150, 150, 150, 0.3);
+$box-shadow: 2px 3px 2px rgba(150, 150, 150, 0.2);
+
+$border: 1px solid rgba(0, 0, 0, 0.05);
