--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -10,7 +10,6 @@
   <div>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </div>
 </div>
 
-<p></p>
 
 <% if @session %>
   <p>Charger: <%= @session.charging_post_id %></p>
@@ -38,8 +37,8 @@
 
   <%= simple_form_for (@charging_session) do |f| %>
     <div class='ev-card d-flex justify-content-between' >
-      <div><%= f.label :charging_post, label: "Outlet" %></div>
-      <div><%= f.association :charging_post, collection:@available_posts, default: 1,  label: false %></div>
+      <div><%= f.label :charging_post, label: "Outlet", required: false %></div>
+      <div id="charging-post-dropdown"><%= f.association :charging_post, collection:@available_posts, default: 1,  label: false %></div>
       <div>
          <%= button_tag(type: 'submit', class: "btn btn-success") do %>
           <i class="fas fa-bolt"></i>
