--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,4 +11,5 @@
 // Your CSS partials
 @import "components/index";
 @import "components/donut";
+@import "components/activity_field";
 @import "pages/index";
