--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -5,25 +5,27 @@
 
 <% if @session %>
   <p>Charger: <%= @session.charging_post_id %></p>
-  <p>Starting time: <%= (@session.start_time.utc + 2.hours).strftime("%H:%M") %></p>
+  <p class="start-time">Starting time: <%= (@session.start_time.utc).strftime("%H:%M") %></p>
+  <p id="starting-time"><%= (@session.start_time.utc).strftime("%H:%M:%S") %></p>
+
 
   <p>Current time: <%= (Time.now.utc + 2.hours).strftime("%H:%M") %></p>
-
   <% current_max_hours = 4 %>
   <% max_park_time = Time.at(current_max_hours * 3600) %>
   <% utc_offset = 3 * 3600 %>
-  <% hej = Time.now.utc - @session.start_time.utc%>
+
   <% time = Time.at(max_park_time - (Time.now.utc - @session.start_time.utc) - utc_offset).strftime("%H:%M:%S") %>
 
-  <!-- Should be updated on a second by second basis. -->
+  <% if ( (@session.start_time.utc + 2.hours) > Time.now.utc )  %>
+  <% end %>
   <div id="donut">
-    <p class="time-remaining"><%= time %></p>
-    <p class="time time-hours"></p>
-    <p class="time time-minutes"></p>
-    <p class="time time-seconds"></p>
-
-
+    <p class="time-status"><%= time %></p>
   </div>
+
+
+
+  <!-- Should be updated on a second by second basis. -->
+
   <br>
   <p><%= link_to "Quit charging", charging_session_path(@session), method: :patch %></p>
 
