--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -24,11 +24,13 @@
     </div>
   </div>
 
-  <% current_max_hours = 4 %>
-  <% max_park_time = Time.at(current_max_hours * 3600) %>
+  <% current_max_units = 4 %>
+  <% max_park_time = Time.at(current_max_units * 60) %>
+  <%= "max_park_time: #{max_park_time}" %>
   <!-- Sest the offset to 0 at Thu June 20 to accomodate Heroku time -->
   <% utc_offset = 0 %>
   <% time = Time.at(max_park_time - (Time.now.utc - @session.start_time.utc) - utc_offset).strftime("%H:%M:%S") %>
+  <%= "remaining time: #{time}" %>
   <p id="starting-time"><%= (@session.start_time.utc).strftime("%H:%M:%S") %></p>
 
   <div id="donut">
