centered the activity-field div

--- a/app/assets/stylesheets/components/_ev-card.scss
+++ b/app/assets/stylesheets/components/_ev-card.scss
@@ -13,6 +13,7 @@
   margin-bottom: auto;
 }
 
-select {
-  -webkit-appearance: menu;
+.activity-field {
+  text-align: center;
+  align-items:center;
 }
