--- a/app/assets/stylesheets/components/_donut.scss
+++ b/app/assets/stylesheets/components/_donut.scss
@@ -1,13 +1,14 @@
 #donut {
-  margin: 20px;
+  // margin: 20px;
   width: 100px;
-  height: 100px;
+  // height: 100px;
+  margin: auto;
 }
 
 .time {
-      font-size: 12px;
-      color: black;
-      transform-origin: 100%;
-      transition: all 0.05s;
-      transition-timing-function: 1;
-    }
+  font-size: 12px;
+  color: black;
+  transform-origin: 100%;
+  transition: all 0.05s;
+  transition-timing-function: 1;
+}
