--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,8 +21,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 55%;
-  min-height: 100vh;
+  padding-top: 40%;
 }
 #login-app_name {
   font-family: $body-font;
@@ -35,19 +34,15 @@ body {
  }
 .form-control {
   width: 90%;
-  margin: 2px 10px;
+  margin: 2px 5%;
 
 }
 .form-div {
   padding: 10%;
+  padding-top: 30%;
 }
-//.pwd-textbox {
-//  background-color: black;
-//  color: yellow;
-//}
 
-.ev-login-form {
-  input {
+.email {
     background: $ev-darkgray;
     border-radius: 8px;
     height: 45px;
@@ -56,13 +51,43 @@ body {
       color: white;
       background: $ev-darkgray;
     }
-  }
-
 }
+.password {
+    background: $ev-darkgray;
+    border-radius: 8px;
+    height: 45px;
+    color: white;
+    &:focus {
+      color: white;
+      background: $ev-darkgray;
+    }
+}
+.form-group {
+  background-color: transparent;
+}
+
 .ev-login-button {
   background-color: $ev-orange;
-  width: 90%;
+  color: white;
+  font-weight: strong;
   border-radius: 18px;
-  padding-left: 27%;
+   width: 90%;
   height: 45px;
+  margin: 2px 5%;
+}
+.form-check-input {
+  margin-left: 1px;
+}
+.form-check-label {
+  margin-left: 18px;
+}
+#link-div {
+  padding-left: 22px;
+  padding-top: 22px;
+//  border: solid purple;
+}
+a {
+  color: $ev-darkgray;
+  text-decoration: none;
+
 }
