--- a/app/assets/stylesheets/components/_ev-card.scss
+++ b/app/assets/stylesheets/components/_ev-card.scss
@@ -33,7 +33,9 @@ i {
 }
 
 #outlet-div {
-  padding-left: 1.5rem;
-  margin-bottom: -1rem;
-  text-align: left;
+
+}
+
+.charger {
+  width: 50px;
 }
