showing but not correctly...

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -20,7 +20,7 @@
 
   <div class="ev-card d-flex justify-content-between">
     <div><%= image_tag "charger.png", class: "charger" %></div>
-    <div></div>
+    <div><%= @session.charging_post_id %></div>
     <div>
       <%= link_to charging_session_path(@session),  method: :patch, class: "btn btn-warning"  do %>
         <i class="fas fa-bolt"></i>
@@ -49,7 +49,7 @@
   <%= simple_form_for (@charging_session) do |f| %>
     <div class='ev-card d-flex justify-content-between' >
       <div id="outlet-div"><%= image_tag "charger.png", class: "charger" %><%= f.label :charging_post, label: ".", required: false, class: "hidden-placeholder" %></div>
-      <div id="charging-post-dropdown"><%= f.association :charging_post, collection:@available_posts.order(:id), default: 1,  label: false, label_method: :id %></div>
+      <div id="charging-post-dropdown"><%= f.association :charging_post, collection:@available_posts.order(:id), default: @available_posts[0],  label: false, label_method: :id %></div>
       <div>
        <%= button_tag(type: 'submit', class: "btn btn-success") do %>
        <i class="fas fa-bolt"></i>
