--- a/app/assets/stylesheets/components/_ev-card.scss
+++ b/app/assets/stylesheets/components/_ev-card.scss
@@ -5,7 +5,7 @@
   box-shadow: $box-shadow;
   align-items: center;
   padding: 0 1rem 0 1rem;
-  height: 12%;
+  height: 9%;
 }
 
 #charging-post-dropdown {
@@ -42,4 +42,10 @@ select {
 
 .charger {
   width: 50px;
+}
+.btn-success {
+  background-color: $ev-green;
+}
+.btn-warning {
+ background-color: $ev-orange;
 }
