--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -59,6 +59,7 @@ body {
       background: $ev-darkgray;
     }
 }
+
 .password {
     background: $ev-darkgray;
     border-radius: 8px;
@@ -69,6 +70,17 @@ body {
       background: $ev-darkgray;
     }
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active  {
+    -webkit-box-shadow: 0 0 0 30px $ev-darkgray inset !important;
+}
+input:-webkit-autofill {
+    -webkit-text-fill-color: white !important;
+}
+
 .form-group {
   background-color: transparent;
 }
