--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -37,13 +37,14 @@
 
   <p>Current time: <%= (Time.now.utc + 2.hours).strftime("%H:%M") %></p>
 
-<% else %>
+<% elsif !@available_posts.empty? %>
 <!-- If the user is NOT charging... -->
+
 
   <%= simple_form_for (@charging_session) do |f| %>
     <div class='ev-card d-flex justify-content-between' >
       <div><%= f.label :charging_post, label: "Outlet", required: false %></div>
-      <div id="charging-post-dropdown"><%= f.association :charging_post, collection:@available_posts.order(:id), default: 1,  label: false, label_method: :id %></div>
+      <div id="charging-post-dropdown"><%= f.association :charging_post, collection:@available_posts, default: 1,  label: false, label_method: :id %></div>
       <div>
        <%= button_tag(type: 'submit', class: "btn btn-success") do %>
        <i class="fas fa-bolt"></i>
