Dummy implementation only, hard coded values but visible

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
     </div>
 
     <div class="navbar-item">
-      <%= link_to profile_path, id: "navbar-queue" do %>
+      <%= link_to queue_path, id: "navbar-queue" do %>
       <%= image_tag "queue_grey.png", class: "navbar-img" %>
       <% end %>
     </div>
