--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -28,7 +28,8 @@
     </div>
   </div>
 
-  <p id="starting-time"><%= (@session.start_time).strftime("%H:%M:%S") %></p>
+  <p id="starting-time"><%= (@session.start_time).strftime("%H:%M:%S") %>
+  <%= @session.time_left_string %> </p>
 
   <div class="activity-field">
     <p><i class="fas fa-clock"></i>  &nbsp&nbsp&nbsp<i class="fas fa-hourglass-start"></i></p>
