--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
 
     <div class="navbar-item">
       <%= link_to profile_path, id: "navbar-me" do %>
-        <% if controller_name == "pages" %>
+        <% if action_name == "profile" %>
           <%= image_tag "me_orange.png", class: "navbar-img" %>
         <% else %>
           <%= image_tag "me_grey.png", class: "navbar-img" %>
@@ -12,7 +12,11 @@
 
     <div class="navbar-item">
       <%= link_to queue_path, id: "navbar-queue" do %>
-      <%= image_tag "queue_grey.png", class: "navbar-img" %>
+      <% if action_name == "queue" %>
+        <%= image_tag "queue_orange.png", class: "navbar-img" %>
+      <% else %>
+        <%= image_tag "queue_grey.png", class: "navbar-img" %>
+      <% end %>
       <% end %>
     </div>
 
