--- a/app/views/layouts/login-layout.html.erb
+++ b/app/views/layouts/login-layout.html.erb
@@ -9,12 +9,9 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
 
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link rel="manifest" href="<%= asset_path 'manifest.json' %>">
 
     <%#= rails style linking of the favicon -->
     <%= favicon_link_tag asset_path('favicon-32x32.png') %>
