--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -17,5 +17,6 @@ $ev-darkgray: #424b58;
 $ev-lightgray: #afb7c1;
 
 $box-shadow: 2px 3px 2px rgba(150, 150, 150, 0.2);
+$accent-box-shadow: 2px 3px 2px rgba(50, 50, 50, 0.8);
 
 $border: 1px solid rgba(0, 0, 0, 0.05);
