Border and background implemented

--- a/app/assets/stylesheets/components/_queue.scss
+++ b/app/assets/stylesheets/components/_queue.scss
@@ -12,9 +12,10 @@
   box-shadow: $accent-box-shadow;
 }
 
-#me-card-charger-available {
+.me-card-charger-available {
   background-color: $ev-green;
 }
+
 
 #q-charger {
   height: 20px;
