--- a/app/views/pages/queue.html.erb
+++ b/app/views/pages/queue.html.erb
@@ -6,24 +6,15 @@
 <% if true %>
   <!-- If there is a queue... -->
   <% User.users_in_queue_in_order.each_with_index do | user, idx | %>
-    <!-- Iterate over the queue. -->
-    <div class='ev-card d-flex justify-content-between <% if user.id == current_user.id %>
-      <%= " me-card" %> '
-      <% if @available_posts.count > idx %>
-        <% "id=me-card-charger-available" %>
-      <% end %>
-
-    <% end %>
-
-    >
+    <div class='ev-card d-flex justify-content-between<% if user.id == current_user.id %><%= " me-card" %><% if @available_posts.count > idx %><%= " me-card-charger-available" %><% end %><% end %>'>
       <div><%= image_tag user.photo, class: "avatar" %></div>
       <div class="d-flex justify-content-between list-for-name">
-        <div><%= user.first_name %> <%= user.last_name %> <%= idx %></div>
+        <div><%= user.first_name %> <%= user.last_name %></div>
         <div>
           <!-- IF there ARE available charging posts... -->
         <% if @available_posts.count > idx %>
           <!-- ...calculate the time remaining until scheduled checkout... -->
-          -15 mins <%= image_tag "charger.png", id: "q-charger" %> <%= @available_posts.first.id %>
+          <%= image_tag "charger.png", id: "q-charger" %> <%= @available_posts.first.id %>
         <% else %>
           <!-- ...ELSE just put it to zero -->
           time remaining
@@ -37,8 +28,5 @@
       </div>
     </div>
   <% end %>
-
-
-
 <% end %>
 
