--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -25,3 +25,10 @@
   align-items: center;
   justify-content: center;
 }
+
+.log-out-btn{
+  height: 28px;
+  width: 30px;
+  border: 0;
+  margin-top: 0.3rem;
+}
