--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -38,10 +38,10 @@
 
   <p id="starting-time"><%= (@session.start_time).strftime("%H:%M:%S") %>
   <div class="activity-field">
-    <p><i class="fas fa-clock"></i>  &nbsp&nbsp&nbsp<i class="fas fa-hourglass-start"></i></p>
+    <p><i class="fas fa-clock"></i> &nbsp&nbsp&nbsp <i class="fas fa-hourglass-end"></i><%= (@session.start_time + 240).strftime("%H:%M:%S") %></p>
     <div id="donut">
     </div>
-    <p class="time-status">Time remaining: <%= @session.time_left_string %></p>
+    <p class="time-status"><i class="fas fa-hourglass-start"></i><%= @session.time_left_string %></p>
   </div>
 
 <% elsif @my_ongoing_queueing and @my_turn %>
