Fixed bugs after Oscar added symbols instead of text to the progressbar.

--- a/app/assets/stylesheets/components/_activity_field.scss
+++ b/app/assets/stylesheets/components/_activity_field.scss
@@ -5,3 +5,14 @@
 #current-time {
   visibility: hidden;
 }
+
+.progress-clock {
+  display: flex;
+  justify-content: center;
+}
+
+.activity-field {
+  p {
+    font-size: 16px;
+  }
+}
